--- a/index.html
+++ b/index.html
@@ -179,7 +179,97 @@
                 </div>
             </div>
         </section>
-        <!-- Player Section Starts -->
+        <!-- Player Section Ends -->
+
+        <!-- Best Moments Section Starts -->
+        <section class="best-moments">
+            <h1 class="section-tittle">Best Moments Of Field</h1>
+            <div class="moments">
+                <div class="moment">
+                    <iframe width="460" height="215" src="https://www.youtube.com/embed/MPUtQr-tj6s"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="moment">
+                    <iframe width="460" height="215" src="https://www.youtube.com/embed/s1ic4Dl9dXc"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="moment">
+                    <iframe width="460" height="215" src="https://www.youtube.com/embed/04hkealGAiw"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <!-- Best Moment Section Ends -->
+
+        <!--Latest News Section Starts -->
+        <section class="latest-news">
+            <h1 class="section-tittle">See Our Latest News</h1>
+            <div class="news-box">
+                <div class="news">
+                    <div class="news-thumbnail">
+                        <img src="images/news/news-1.webp" alt="">
+                    </div>
+                    <div class="news-text">
+                        <h3>PREMIER LEAGUE HOSPITALITY 2021/22</h3>
+                        <p>After a year away, why not treat yourself to our premier hospitality to enjoy some fantastic
+                            benefits while you watch the Clarets take on the best of the best once again....</p>
+                    </div>
+                    <div class="read-button">
+                        <a href="https://www.chelseafc.com/en" target="_blank">Read More <span><i
+                                    class="fas fa-long-arrow-alt-right"></i></span></a>
+                    </div>
+                </div>
+                <div class="news">
+                    <div class="news-thumbnail">
+                        <img src="images/news/news-2.webp" alt="">
+                    </div>
+                    <div class="news-text">
+                        <h3>PREMIER LEAGUE HOSPITALITY 2021/22</h3>
+                        <p>After a year away, why not treat yourself to our premier hospitality to enjoy some fantastic
+                            benefits while you watch the Clarets take on the best of the best once again....</p>
+                    </div>
+                    <div class="read-button">
+                        <a href="https://www.chelseafc.com/en" target="_blank">Read More <span><i
+                                    class="fas fa-long-arrow-alt-right"></i></span></a>
+                    </div>
+                </div>
+                <div class="news">
+                    <div class="news-thumbnail">
+                        <img src="images/news/news-3.webp" alt="">
+                    </div>
+                    <div class="news-text">
+                        <h3>PREMIER LEAGUE HOSPITALITY 2021/22</h3>
+                        <p>After a year away, why not treat yourself to our premier hospitality to enjoy some fantastic
+                            benefits while you watch the Clarets take on the best of the best once again....</p>
+                    </div>
+                    <div class="read-button">
+                        <a href="https://www.chelseafc.com/en" target="_blank">Read More <span><i
+                                    class="fas fa-long-arrow-alt-right"></i></span></a>
+                    </div>
+                </div>
+                <div class="news">
+                    <div class="news-thumbnail">
+                        <img src="images/news/news-4.webp" alt="">
+                    </div>
+                    <div class="news-text">
+                        <h3>PREMIER LEAGUE HOSPITALITY 2021/22</h3>
+                        <p>After a year away, why not treat yourself to our premier hospitality to enjoy some fantastic
+                            benefits while you watch the Clarets take on the best of the best once again....</p>
+                    </div>
+                    <div class="read-button">
+                        <a href="https://www.chelseafc.com/en" target="_blank">Read More <span><i
+                                    class="fas fa-long-arrow-alt-right"></i></span></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Latest News Section Ends -->
     </main>
     <!-- Footer Section Starts -->
     <footer>
